feat(chat): add group rooms and LAN realtime support